--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
-/* global css*/
 
+/* global css*/
+html{
+    font-size: 12px;
+}
 body {
     min-height: 100vh;
     display: flex;
@@ -10,8 +13,14 @@ body {
     flex: 1;
 }
 
-.lead {
+.lead{
     font-size: 1.2em;
+}
+
+.content-container {
+    min-height: calc(100vh - 60px);
+    display: flex;
+    flex-direction: column;
 }
 
 footer {
@@ -19,24 +28,30 @@ footer {
 }
 
 /* index.html css*/
-.index_card {
-    border: none;
+.index_card{
+    border:none;
 }
-
-.index_text {
+.index_text{
     min-height: 8em;
 }
 
-.index_btn_card {
-    width: 10em;
+.index_btn_card{
+    width:10em;
 }
 
-.calendar {
+.calendar{
     height: 50px;
-    width: 50px;
+    width:50px;
+}
+
+.profil{
+    height: 200px;
+    width:200px;
 }
 
 
-
-
-
+@media (min-width:768px){
+    html{
+        font-size:16px;
+    }
+}
